--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,14 +35,13 @@ matplotlib = "^3.4.3"
 numpy = "^1.22.2"
 nltk = "^3.6.2"
 pandas = "^1.3.2"
-typer = {extras = ["all"], version = "^0.3.2"}
 pydantic = {extras = ["dotenv"], version = "^1.8.2"}
 requests = "^2.26.0"
 tqdm = "^4.62.2"
 rtoml = "^0.7.0"
+typer = {version = "^0.4.1", extras = ["all"]}
 
 [tool.poetry.dev-dependencies]
-black = "^21.7b0"
 isort = "^5.9.3"
 safety = "^1.10.3"
 flake8 = "^3.9.2"
@@ -51,10 +50,11 @@ mypy = "^0.910"
 pytest = "^6.2.4"
 pre-commit = "^2.14.0"
 pytest-cov = "^2.12.1"
-mkdocs-material = "^7.2.4"
 pytest-mock = "^3.6.1"
-mkdocs-click = "^0.4.0"
 devtools = {extras = ["pygments"], version = "^0.8.0"}
+black = "^22.3.0"
+mkdocs-click = "^0.7.0"
+mkdocs-material = "^8.2.13"
 
 [tool.pytest.ini_options]
 log_cli = true
